# sqlalchemy-pg-fts

./: .gitignore  .tool-versions  CHANGELOG.md  README.md  pyproject.toml  tox.ini
sqlalcehmy_pg_fts/: __init__.py  tsquery.py  websearch.py
sqlalchemy_pg_fts/: __init__.py  errors.py  tsquery.py  tsvector.py  websearch.py
tests/: util.py
tests/integration/: conftest.py  model.py  test_sqlalcehmy_pg_fts.py  test_tsquery.py  test_tsvector.py  test_websearch.py
tests/unit/: test_ts_query.py  test_tsquery.py  test_tsvector.py  test_websearch.py
